feat: add general flow to document detail
